<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Alex News</string>

    <string name="menu_News">Новости</string>
    <string name="menu_Bookmarks">Закладки</string>
    <string name="menu_Notes">Мои Заметки</string>
    <string name="menu_Settings">Настройки</string>
    <string name="menu_Search">Поиск</string>


    <string name="menu_Category">Категории</string>
    <string name="menu_category_MyNews">Мои Новости</string>
    <string name="menu_category_Health">Здоровье</string>
    <string name="menu_category_Entertainment">Развлечения</string>
    <string name="menu_category_Sport">Спорт</string>
    <string name="menu_category_Business">Бизнес</string>
    <string name="menu_category_Global">Глобальные</string>
    <string name="menu_category_Science">Наука</string>
    <string name="menu_category_Technologies">Технологии</string>

    <string name="menu_Other">Прочее</string>
    <string name="menu_about_app">О приложении</string>
    <string name="menu_message_to_programmer">Связаться с разработчиком</string>


    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_authentication">Ошибка аунтефикации, пgпробуйте еще раз</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="goBack">Назад</string>
    <string name="ok">ОК</string>
    <string name="Bookmark">Закладки</string>
    <string name="changeMyNews" tools:ignore="ExtraTranslation">Изменить Мои новости</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Прочее</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="AddAllCategories">Добавить все категории</string>
    <string name="Search">Поиск</string>
    <string name="menuNewsSources">Источник новостей</string>
    <string name="News">Новости</string>
    <string name="fromSource">От источника</string>
    <string name="change">Мои новости</string>
    <string name="updatePage">Страница обновлена</string>
    <string name="subject">Тема</string>
    <string name="message">Сообщение</string>
    <string name="Sent">Отправить</string>
    <string name="No_internet">Отсуствует подключение к интернету. Активируйте оффлайн режим </string>
    <string name="No_data">По данному запросу ничего не найдено </string>
    <string name="Biometric_auth">Биометрическая аунтефикация</string>
    <string name="Sources_nameMistake">Неправильно введено имя источника </string>



    //From classes
    <string name="onErorGoogleAuth">Вам не удалось войти в аккаунт. Проверьте интернет подключение и попробуйте еще раз</string>
    <string name="onGoodGoogleAuth">Авторизация прошла успешно</string>
    <string name="Auth">Авторизоваться</string>
    <string name="logOut">Выйти из аккаунта</string>
    <string name="youLogOut">Вы вышли из своего аккаунта</string>
    <string name="adding_notes">Здесь вы можете оставить заметку</string>
    <string name="InputPassword">Введите пароль</string>
    <string name="InputYourPassword">Ввеcти пароль</string>
    <string name="Offline_mode">Оффлайн режим</string>

    <string name="january">января</string>
    <string name="february">февраля</string>
    <string name="march">марта</string>
    <string name="april">апреля</string>
    <string name="may">мая</string>
    <string name="june">июня</string>
    <string name="july">июля</string>
    <string name="august">августа</string>
    <string name="september">сентября</string>
    <string name="october">октября</string>
    <string name="november">ноября</string>
    <string name="december">декабря</string>

    <string name="error"> Ошибка </string>







</resources>