<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FragmentMessageToProgrammer">

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/searchview_back"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="?attr/actionMenuTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/searchview_back"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:textColorHint="?attr/actionMenuTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/Sent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <EditText-->
<!--        android:id="@+id/editTextTextMultiLine"-->
<!--        android:layout_width="207dp"-->
<!--        android:layout_height="133dp"-->
<!--        android:ems="10"-->
<!--        android:gravity="start|top"-->
<!--        android:inputType="textMultiLine"-->
<!--        tools:layout_editor_absoluteX="71dp"-->
<!--        tools:layout_editor_absoluteY="209dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>